--- a/test/fixtures/event_types.yml
+++ b/test/fixtures/event_types.yml
@@ -5,5 +5,5 @@ one:
   description: MyString
 
 two:
-  title: MyString
-  description: MyString
+  title: Airshow
+  description: Pictures from airshows
