added views for rights, fixed database configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -36,4 +36,5 @@ production:
   pool: 5
   username: devildog
   password: mu767orupi
-  socket: /tmp/mysql.sock
+#  socket: /tmp/mysql.sock
+  host: localhost
