cleaning up tests at base level

--- a/test/fixtures/email_addresses.yml
+++ b/test/fixtures/email_addresses.yml
@@ -2,10 +2,10 @@
 
 one:
   address: MyString
-  status: false
+  active: false
   source: MyText
 
 two:
   address: MyString
-  status: false
+  active: false
   source: MyText
