--- a/test/fixtures/event_signups.yml
+++ b/test/fixtures/event_signups.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
-  events: 
-  members: 
-  type: 
+  event: 
+  member: 
+  commitment_level: 
 
 two:
-  events: 
-  members: 
-  type: 
+  event: 
+  member: 
+  commitment_level: 
