--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,13 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
+  short_name: MyString
+  airport_name: MyString
+  icao_identifier: MyString
   description: MyText
   latitude: MyString
   longitude: MyString
 
 two:
-  name: MyString
+  short_name: MyString
+  airport_name: MyString
+  icao_identifier: MyString
   description: MyText
   latitude: MyString
   longitude: MyString
