--- a/test/fixtures/squadron_documents.yml
+++ b/test/fixtures/squadron_documents.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  documentcategory: 
+  document_category_id: 
   title: MyString
   description: MyText
   file_url: MyString
@@ -9,7 +9,7 @@ one:
   image_url: MyString
 
 two:
-  documentcategory: 
+  document_category_id: 
   title: MyString
   description: MyText
   file_url: MyString
